--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,15 +5,23 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 500px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
 
+  
+
 #mapBox {
-    max-height: 500px;
-    max-width: 500px;
+    /* max-height: 500px;
+    max-width: 500px; */
+    float: right;
 }
 #map {
-    max-height: 500px;
-    max-width: 500px;
+    /* max-height: 500px;
+    max-width: 500px; */
+    float: right;
+    
+    
 }
 
 h1 {
@@ -35,7 +43,7 @@ h5 {
 
     font-family: 'Changa', sans-serif;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 20px;
     color: #2E2E2E;
 
 }
@@ -56,15 +64,80 @@ button {
     color: #fff;
     height: 40px;
     width: 140px;
+    border: none;
 }
 
-btn-warning {
+.btn:hover{
+    background-color: #fff;
+}
+
+.btn-warning {
     font-family: 'Changa', sans-serif;
-    font-weight: bolder;
-    background-color: #EFA83C;
-    color: #fff;
+    font-size: 14px;
+    font-weight: 400;
+    background-color: #fff;
+    outline: #EFA83C
+    
 
 }
+
+
+
+.hvr-sweep-to-right {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+  }
+  .hvr-sweep-to-right:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #EFA83C;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transform-origin: 0 50%;
+    transform-origin: 0 50%;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  .hvr-sweep-to-right:hover, .hvr-sweep-to-right:focus, .hvr-sweep-to-right:active {
+    color: white;
+  }
+  .hvr-sweep-to-right:hover:before, .hvr-sweep-to-right:focus:before, .hvr-sweep-to-right:active:before {
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
+  
+  /* Sweep To Left */
+  .hvr-sweep-to-left {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+  }
+
+
 
 #logo{
     margin-left: 20px;
@@ -82,9 +155,17 @@ btn-warning {
 
 }
 
+.searchResults { }
 
 
+#map {
+    width: 600px;
+    height: 600px;
+}
 
+.form-control:focus {
+    border-color: #EFA83C;
+    box-shadow: 0 0 0 1px #EFA83C;
+    background-color: #fefefe;
+} 
 
-
- 
